--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n8n-nodes-discord-trigger",
+  "name": "n8n-nodes-discord-trigger-new",
   "version": "0.8.0",
   "description": "A node that triggers a workflow whenever a message from discord is sent.",
   "keywords": [
@@ -13,18 +13,18 @@
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "katerlol",
-    "email": "katerlol@proton.me"
+    "name": "swenenzy",
+    "email": "mail@swenenzy.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/katerlol/n8n-discord-trigger"
+    "url": "https://github.com/swenenzy/n8n-discord-trigger"
   },
   "engines": {
     "node": ">=18.10",
     "pnpm": ">=9.1"
   },
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@10.20.0",
   "main": "index.js",
   "scripts": {
     "build": "tsc && gulp build:icons",
@@ -48,22 +48,22 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^7.15.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-n8n-nodes-base": "^1.16.1",
-    "gulp": "^4.0.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.39.0",
+    "eslint-plugin-n8n-nodes-base": "^1.16.4",
+    "gulp": "^5.0.1",
     "n8n-workflow": "*",
-    "n8n-core": "^0.125.0",
-    "prettier": "^3.3.2",
-    "typescript": "^5.5.3"
+    "n8n-core": "^1.117.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "n8n-workflow": "*"
   },
   "dependencies": {
     "@types/node-ipc": "^9.2.3",
-    "axios": "^1.7.9",
-    "discord.js": "^14.17.3",
+    "axios": "^1.13.1",
+    "discord.js": "^14.24.2",
     "node-ipc": "^12.0.0"
   }
 }
