--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-discord-trigger-new",
-  "version": "0.10.12",
+  "version": "0.11.0",
   "description": "A node that triggers a workflow whenever a message from discord is sent.",
   "keywords": [
     "n8n",
@@ -45,16 +45,18 @@
     ],
     "nodes": [
       "dist/nodes/DiscordTrigger/DiscordTrigger.node.js",
-      "dist/nodes/DiscordInteraction/DiscordInteraction.node.js"
+      "dist/nodes/DiscordInteraction/DiscordInteraction.node.js",
+      "dist/nodes/DiscordVoiceTrigger/DiscordVoiceTrigger.node.js"
     ]
   },
   "devDependencies": {
+    "@types/proper-lockfile": "^4.1.4",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.39.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.4",
     "gulp": "^5.0.1",
-    "n8n-workflow": "*",
     "n8n-core": "^1.117.0",
+    "n8n-workflow": "*",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3"
   },
@@ -62,9 +64,13 @@
     "n8n-workflow": "*"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.19.0",
     "@types/node-ipc": "^9.2.3",
     "axios": "^1.13.1",
     "discord.js": "^14.24.2",
-    "node-ipc": "^12.0.0"
+    "node-ipc": "^12.0.0",
+    "prism-media": "^1.3.5",
+    "proper-lockfile": "^4.1.2"
   }
 }
